--- a/Education.html
+++ b/Education.html
@@ -76,9 +76,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Hobbies</a></li>
-      <li><a href="#">Education</a></li>
+      <li><a href="#">About Me.html</a></li>
+      <li><a href="#">Hobbies.html</a></li>
+      <li><a href="#">Education.html</a></li>
     </ul>
   </nav>
   
