--- a/Education.html
+++ b/Education.html
@@ -76,9 +76,10 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="#">About Me.html</a></li>
-      <li><a href="#">Hobbies.html</a></li>
-      <li><a href="#">Education.html</a></li>
+      <li><a href="About Me.html">About Me</a></li>
+      <li><a href="Hobbies.html">Hobbies</a></li>
+      <li><a href="Education.html">Education</a></li>
+      
     </ul>
   </nav>
   
