--- a/Education.html
+++ b/Education.html
@@ -76,7 +76,7 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="About Me.html">About Me</a></li>
+      <li><a href="index.html">About Me</a></li>
       <li><a href="Hobbies.html">Hobbies</a></li>
       <li><a href="Education.html">Education</a></li>
       
