--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@ footer {
 <section>
   <nav>
     <ul>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Hobbies</a></li>
-      <li><a href="#">Education</a></li>
+      <li><a href="index.html">About Me</a></li>
+      <li><a href="Hobbies.html">Hobbies</a></li>
+      <li><a href="Education.html">Education</a></li>
     </ul>
   </nav>
   
