--- a/Hobbies.html
+++ b/Hobbies.html
@@ -87,10 +87,15 @@ footer {
     <p>Singing</p>
     <p>Water Sports</p>
     <p>Hiking</p>
-    <p>Sudoku</p>
+    <p>Seeing Space Force in the wild!!</p>
   </article>
 </section>
 
+<section class="hobby-photos">
+  <img src="Images/IMG_1885.jpg" alt="Hobby 1">
+  <img src="Images/IMG_1886.jpg" alt="Hobby 2">
+  <img src="Images/IMG_1887.jpg" alt="Hobby 3">
+</section>
 <footer>
   <p>"You miss 100% of the shots you don't take" - Wayne Gretzky   - Michael Scott</p>
 </footer>
